# jaxneurorl

./: .gitignore  .gitmodules  README.md  Visualizing_Successor_Representation.ipynb  conda_env.yaml  init_and_start_wandb_sweep.py  install-fas.md  install.md  pyproject.toml  requirements-2.txt  requirements.txt  setup.py  successor_representation.ipynb  wandb_search.py
agents/: alphazero.py  baselines.py  qlearning.py  value_based_basics.py  value_based_pqn.py
configs/: alphazero.yaml  craftax_sweep_config.yaml  dyna.yaml  iql.yaml  qlearning.yaml  qlearning_sumit.yaml
configs/debug/: default.yaml
configs/env/: cartpole.yaml
configs/rlenv/: cartpole.yaml
configs/user/: wilka.yaml
jaxneurorl/: flags.py  launcher.py  loggers.py  losses.py  losses_test.py  observers.py  parallel.py  utils.py  wrappers.py
jaxneurorl/agents/: alphazero.py  basics.py  dyna.py  qlearning.py  qlearning_dyna.py  usfa.py  value_based_basics.py  value_based_pqn.py
multiagent/: iql.py  overcooked.py
multiagent/config/: iql.yaml
projects/example/: baselines.py  housemaze_dyna.py
projects/humansf/: alphazero.py  data_loading.py  download_data.py  gcs.py  housemaze_analysis.py  housemaze_env.py  housemaze_experiments.py  housemaze_trainer.py  keyroom-symbolic-test.ipynb  keyroom-test.ipynb  keyroom.py  keyroom_symbolic.py  logger.py  loggers.py  minigrid_common.py  networks-test.ipynb  networks.py  observers.py  offtask_dyna.py  qlearning.py  (+10 more)
singleagent/: alphazero.py  baselines.py  basics.py  cartpole.py  contrastive_dyna.py  qlearning.py  qlearning_v1.py  value_based_basics.py
(+96 files in other folders)
